@@ -1,4 +1,13 @@
-$Id: ChangeLog,v 1.468 2008/08/06 12:51:00 haraldkipp Exp $
+$Id: ChangeLog,v 1.469 2008/08/09 17:35:32 haraldkipp Exp $
+
+2008-08-09  Harald Kipp  <harald.kipp@egnite.de>
+
+	* dev/netbuf.c, include/dev/netbuf.h: Simplified NETBUF 
+	allocation and release. Note, that NutNetBufFree will
+	no longer return an error.
+
+	* include/sys/nutdebug.h: NUTASSERT added.
+
 
 2008-08-06  Harald Kipp  <harald.kipp@egnite.de>
 
